# assert-impl-trait

./: Cargo.toml  README.md
src/: assert_impl.rs  lib.rs  parse.rs  token_iter.rs  types.rs
tests/: mod.rs
